--- a/p1.html
+++ b/p1.html
@@ -8,6 +8,12 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -18,21 +24,21 @@
     <nav>
       <a href="index.html"><h1>Khushi Shah</h1></a>
         <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
     </nav>
 
     <!-- main content -->
     <div class="content">
-      <!-- 1. give your project  a titile -->
+      <!-- 1. give your  a titile -->
 
       <h1>
         Project #1 Lost in Translation
