--- a/p1.html
+++ b/p1.html
@@ -49,7 +49,7 @@
       <div class="fullwidth">
         <!-- below width and height refers to the dimensions of your sketch-->
 
-        <iframe style= "width:250px;height:300px;" src="https://editor.p5js.org/kshah41/full/JTa1hq3tx"></iframe>
+        <iframe style= "width:240px;height:270px;" src="https://editor.p5js.org/kshah41/full/JTa1hq3tx"></iframe>
       </div>
 
       <!-- 3. write a short description to describe what the work is about -->
@@ -67,7 +67,9 @@
       </h1>
       <p>
         Even though this was not a very difficult code, I think that understanding code got a little better for me personally.
-
+      </p>
+      <footer>
+      </footer>
          </div>
   </body>
 </html>
