--- a/p2.html
+++ b/p2.html
@@ -11,30 +11,62 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+    <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+    
   </head>
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+    <nav>
+      <a href="index.html"><h1>Khushi Shah</h1></a>
+        <ul>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
-    </div>
+    </nav>
 
-    <!-- main content -->
     <div class="content">
+      <!-- 1. give your  a titile -->
+
+      <h1>
+        Project #2 Lost and Found
+      </h1>
+
+    <div class="fullwidth">
+     <iframe style= "width:400px;height:440px;"src="https://editor.p5js.org/kshah41/full/T6KN4UP5D"></iframe>
+   </div>
+
+
+
+    <h1>
+        Design Process
+      </h1>
+
       <p>
-        Coming soon
+       This description of a lost and found object was given to me by Connor. He described his object as "I once lost my Stuffed Animal, It was a Webkinz elephant stuffed animal. It had two large ears,4 floppy legs and a chunky body. The color was overall Gray. The trunk has a slight curve on the bottom"
       </p>
-    </div>
-  </body>
+
+      <!-- 4. reflection -->
+      <h1>
+        Reflections
+      </h1>
+      <p>
+        My partner did describe the image very accurately using the curves, color and the overall body. I was able to find the stuffed Animal very easily on the web. I tried to make the animal as accurate as possible using ellipses as I was still having a difficult time using beziers and
+      </p>
+      <footer>
+      </footer>
 </html>
