--- a/p3.html
+++ b/p3.html
@@ -1,34 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Your Name | Code 2 Portfolio</title>
+    <title>Khushi Shah| FormCode Portfolio</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
   </head>
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+   
+      <nav>
+      <a href="index.html"><h1>Khushi Shah</h1></a>
+        <ul>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
-    </div>
+    </nav>
+
+
+
+
+
+
+      <!-- 1. give your  a titile -->
+<div class="content">
+      <h1>
+        Project #2 Lost and Found
+      </h1>
+
+      
+
+
+    <div class="fullwidth">
+<iframe style= "width:400px;height:440px;"src="https://editor.p5js.org/kshah41/full/dihfN8ukl"></iframe>
+</div>
+
+<h1>
+        Design Process
+      </h1>
+
+      <p>
+        My design process involved a grid filled in using Google Sheets and my canvas size was made in p5js to replicate the same grid. To get the colors I wanted, I found the RGB codes from the google color picker 
+      </p>
+
+      <!-- 4. reflection -->
+      <h1>
+        Reflections
+      </h1>
+      <p>
+        Even though this was not a very difficult code, I think that understanding code got a little better for me personally.
+      </p>
 
     <!-- main content -->
     <div class="content">
