--- a/p3.html
+++ b/p3.html
@@ -47,7 +47,7 @@
       <!-- 1. give your  a titile -->
 <div class="content">
       <h1>
-        Project #2 Lost and Found
+        Project #2 Face Generator 
       </h1>
 
       
@@ -57,26 +57,30 @@
 <iframe style= "width:400px;height:440px;"src="https://editor.p5js.org/kshah41/full/dihfN8ukl"></iframe>
 </div>
 
+
 <h1>
         Design Process
       </h1>
 
       <p>
-        My design process involved a grid filled in using Google Sheets and my canvas size was made in p5js to replicate the same grid. To get the colors I wanted, I found the RGB codes from the google color picker 
+        My design process involved a lot of trial and error. First I created the sketch on Adobe Illustrator and tried to make the final and end version first in p5JS. I then gave variables and entered random coordinates that fit what I wanted. On the 5th try, my final character is shown.
       </p>
+
+      <img src="Process sketch.png" width = "100%"
+    /div>
 
       <!-- 4. reflection -->
       <h1>
         Reflections
       </h1>
       <p>
-        Even though this was not a very difficult code, I think that understanding code got a little better for me personally.
+        This was harder than expected.
       </p>
 
     <!-- main content -->
     <div class="content">
       <p>
-        Coming soon
+       
       </p>
     </div>
   </body>
