--- a/p3.html
+++ b/p3.html
@@ -64,8 +64,8 @@
         My design process involved a lot of trial and error. First I created the sketch on Adobe Illustrator and tried to make the final and end version first in p5JS. I then gave variables and entered random coordinates that fit what I wanted. On the 5th try, my final character is shown.
       </p>
 
-      <img src="Process sketch.png" width = "100%"
-    /div>
+      <img src="Experimental clocks.png" width = "100%"
+    uf/div>
 
       <!-- 4. reflection -->
       <h1>
