--- a/p4.html
+++ b/p4.html
@@ -8,6 +8,12 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -15,26 +21,54 @@
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+  
+      <nav>
+      <a href="index.html"><h1>Khushi Shah</h1></a>
+        <ul>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
+    </nav>
     </div>
 
     <!-- main content -->
     <div class="content">
+
+       <h1>
+        Project #4 Experimental Clock 
+      </h1>
+
+
+
+      <iframe style= "width:400px;height:442px;"src="https://editor.p5js.org/kshah41/full/ijX3Cr1l5"></iframe>
+
+      <div class="fullwidth">
+
+      <h1>
+        Design Process
+      </h1>
+
       <p>
-        Coming soon
+        My design process was to first create sketches in Illustrator and then trying to use a random generator for circles and creating variables that would allow it to stay for 50 seconds and have another circle appear that says "Time to Cook" once the 50 seconds are over. I used framerate to determine how long it would take for 200 circles to appear.
       </p>
+
+       <img src="Experimental clocks.png" width = 50%>
+       <br>
+          
+
+      <h1><br>
+        Reflections
+      </h1>
+      <p> 
+        I wanted to show the way chickpeas is cooked in my household. We soak chickpeas a whole day before cooking with it. I wanted to show this using a fairly short timer. I think this project helped me understand the if/else function and I also played around with the map function so that the text moves with the big circle.
+      </p> 
     </div>
   </body>
 </html>
