--- a/p5.html
+++ b/p5.html
@@ -8,6 +8,14 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -15,26 +23,58 @@
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
+   
       <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+       <ul>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
     </div>
 
     <!-- main content -->
     <div class="content">
+
+       <h1>
+        Project #5 Exquisite Corpse 2 
+      </h1>
+
+
+
+      <iframe style= "width:400px;height:800px;"src="https://editor.p5js.org/kshah41/full/yk6sFlTF_"></iframe>
+
+      <div class="fullwidth">
+
+      <h1>
+        Design Process
+      </h1>
+
       <p>
-        Coming soon
+        To make this hybrid character, we as a group of 4 made characters on our own and shared them with each other to then create the final result. 
       </p>
+
+        <div class="column">
+
+       <img src="Yulia.jpg" width = 40%>
+       <img src="Robot.png" width = 40%>
+       <img src="Monica.png" width = 40%>
+       <br>
+          
+
+      <h1><br>
+        Reflections
+      </h1>
+      <p> 
+        It was fun to see how a new character was formed and allowing others creativity to merge into ours. I was having a difficult time with the complex head so I used Illustrator to figure out the coordinates and it did make figuring out coordinates easier.
+      </p> 
+
+   
     </div>
   </body>
 </html>
