--- a/p6.html
+++ b/p6.html
@@ -8,6 +8,15 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
+ 
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -15,26 +24,52 @@
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+    <div>
+    <nav>
+      <a href="index.html"><h1>Khushi Shah</h1></a>
+        <ul>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
+    </nav>
     </div>
 
     <!-- main content -->
     <div class="content">
+      <h1>
+        Project #6 Optical Illusion 
+      </h1>
+
+
+      <iframe style= "width:400px;height:400px;"src="https://editor.p5js.org/kshah41/full/3V_4g_N5j"></iframe>
+
+
+      <div class="fullwidth">
+
+        <h1>
+       Concept
+      </h1>
+
       <p>
-        Coming soon
+        In this project I chose to look at Indian designs and collect inspiration from henna designs. I recently went for my sisters wedding where we all applied henna that was very intricate and detailed. It had a lot of repitition so I tried to create something similar!
       </p>
+
+        <h1>
+       Reflection
+      </h1>
+
+      <p>
+      At first I created three designs in Illustrator but I had an open mind for what the final result was supposed to look like. I played around with making different vertices to create an interesting but still Indian design using the begin shape/end shape function and added the loop I created to repeat. I would see this design being used on Indian sarees or Mehendi designs
+      </p>
+
+        
     </div>
   </body>
 </html>
