--- a/p7.html
+++ b/p7.html
@@ -8,32 +8,63 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
 
   <body>
-    <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
+    <div>
+    <nav>
+      <a href="index.html"><h1>Khushi Shah</h1></a>
+        <ul>
+        <li><a href="p1.html">Project #1</a></li>
+        <li><a href="p2.html">Project #2</a></li>
+        <li><a href="p3.html">Project #3</a></li>
+        <li><a href="p4.html">Project #4</a></li>
+        <li><a href="p5.html">Project #5</a></li>
+        <li><a href="p6.html">Project #6</a></li>
+        <li><a href="p7.html">Project #7</a></li>
+        <li><a href="p8.html">Project #8</a></li>
+        <li><a href="p9.html">Project #9</a></li>
       </ul>
+    </nav>
     </div>
 
     <!-- main content -->
     <div class="content">
+      <h1>
+        Project #7 Data Portrait 
+      </h1>
+
+      <iframe style= "width:400px;height:400px;"src="https://editor.p5js.org/kshah41/full/L0Ss9Lns5"></iframe>
+
+
+<div class="fullwidth">
+    <h1>
+       Description
+      </h1>
+
       <p>
-        Coming soon
+        With this data portrait I show the number of times I say, "I don't know" during a day and track it for a whole week. it starts from Monday and Ends on Sunday.
+      </p>
+
+        <h1>
+       Reflection
+      </h1>
+
+      <p>
+        The idea came out of saying the phrase multiple times while doing coding assignments, I decided to track how much I say this as it is commonly spoken. If not for this exercise I wouldn't have gathered how much I do not know throughout the week. I first put in the days in text but decided to take it out to keep it more abstract. 
       </p>
     </div>
   </body>
